# Minecraft-Splash

./: .gitignore  CMakeLists.txt  README.md  ReloadGD.bat  about.md  changelog.md  mod.json
.github/ISSUE_TEMPLATE/: bug.yml  suggestion.yml
.github/workflows/: all_platforms_merge.yml  win-android-arm7-arm8-merge.yml
build-android64/: CMakeCache.txt
src/: main.cpp  main.h
src/layers/: ChooseLayer.cpp  ChooseLayer.h  EditEntriesLayer.cpp  EditEntriesLayer.h  EditSplashAppearanceLayer.cpp  EditSplashAppearanceLayer.h  EntriesLayer.cpp  EntriesLayer.h  SettingsLayer.cpp  SettingsLayer.h  SplashesListPopup.cpp  SplashesListPopup.h
src/nodes/: EditableSplashNode.cpp  EditableSplashNode.h
src/settings/: CustomSettings.cpp  CustomSettings.h  SectionSetting.hpp
src/tools/: Easings.cpp  Easings.h  EasingsPreview.h
